2008-01-00  Brian Matherly <brian@gramps-project.org>
	* src/DisplayModels/_BaseModel.py: Fix 0001554: Select Place search
	
2008-01-08 Jim Sack <jgsack@san.rr.com>
	src/gen/utils/test/callback_test.py : add comment about
	intentional Error from call to undefined function

2008-01-08  Benny Malengier <benny.malengier@gramps-project.org>
	* src/ArgHandler.py: bug with tarfile exceptions

2008-01-08  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/Editors/_EditFamily.py: import fixes
	* src/plugins/FindDupes.py: variable typo fix
	0001428: In EditFamily: NameError

2008-01-08  Benny Malengier <benny.malengier@gramps-project.org>
	* src/DisplayTabs/_BackRefList.py: don't do sel change when dirty

2008-01-08  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/Editors/_EditFamily.py: 0001428: In EditFamily: NameError. 
	changed db -> self.db

2008-01-07  Benny Malengier <benny.malengier@gramps-project.org>
            Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/Bookmarks.py: bookmark dup warning, bug 1346

2008-01-07  Benny Malengier <benny.malengier@gramps-project.org>
	* src/DbManager.py: bug with creation/rename

2008-01-07  Benny Malengier <benny.malengier@gramps-project.org>
	* src/DataViews/GrampletView.py:
	* src/gramps_main.py:
	* src/images/48x48/gramps-gramplet.png:
	* src/images/scalable/gramps-gramplet.svg:
	* src/images/48x48/Makefile.am:
	* src/images/scalable/Makefile.am:
	start of gramplet icon

2008-01-07 Raphael Ackermann <raphael.ackermann@gmail.com
	* src/DataViews/PersonView.py: removed unused import
	* src/plugins/EventCmp.py: fixed error introduced with previous change
	* src/gramps.py: removed unused import
	* src/PageView.py: removed unused import

2008-01-07 Raphael Ackermann <raphael.ackermann@gmail.com
	* src/plugins/EventCmp.py: clean up imports and fix pylint error
	0001496: in EventCmp.py: E:198:fix: Using variable 'l' before assignment

2008-01-07 Raphael Ackermann <raphael.ackermann@gmail.com